--- a/pom.xml
+++ b/pom.xml
@@ -71,11 +71,12 @@
     </pluginManagement>
   </build>
 
+  <!--
   <reporting>
     <plugins>
       <plugin>
         <artifactId>maven-project-info-reports-plugin</artifactId>
       </plugin>
     </plugins>
-  </reporting>
+  </reporting> -->
 </project>
