--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.113.Final</version>
+    </dependency>
+
   </dependencies>
 
   <build>
